[package]
authors = ["Sebastian Plamauer <sebastian.plamauer@motius.de>"]
edition = "2018"
readme = "README.md"
name = "attest"
version = "0.1.0"

# this lets you use `cargo fix`!
[[bin]]
name = "attest"
test = false
bench = false

[lib]
test = false

[dependencies]
atsamd-hal = { version = "0.16.0", features = ["same53j"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
generic-array = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"
vcell = "0.1.3"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
